--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>ru.gb.homework4/ru.gb.homework4.HelloApplication</mainClass>
+                            <mainClass>ru.gb.homework4/ru.gb.homework4.ChatApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
